fixed the issue with the navlinks getting too small on mobile

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -27,6 +27,7 @@ body {
     background: lightblue;
 }
 .Title {
+    font-size: 1rem;
     position: absolute;
     top: 0;
     left: 0;
