--- a/public/style/navbar.css
+++ b/public/style/navbar.css
@@ -4,10 +4,10 @@
     box-sizing: border-box;
 }
 :root {
-    --nav-padding: 2%;
+    /* --nav-padding: 18% 0 2% 2%; */
     --nav-height: 200px;
     --nav-height-offscreen: calc(-0.6 * var(--nav-height));
-    --nav-space-between-hamburger-and-links-collapsed: 25px;
+    --nav-space-between-hamburger-and-links-collapsed: 45px;
 }
 a { text-decoration: none; }
 nav {
@@ -28,12 +28,12 @@ nav.clicked {
 }
 
 .Navbar_Nav {
-    width: 50%;
+    /* width: 70%; */
     display: flex;
 }
 
 .Navbar_Nav > .Nav_Item { 
-    /* flex-grow: 1; */
+    flex-grow: 1;
     text-align: center;
 
     padding: 5px 8px;
